--- a/wp-content/themes/skilled-child/css/jquery-ui.css
+++ b/wp-content/themes/skilled-child/css/jquery-ui.css
@@ -385,7 +385,7 @@ button.ui-button::-moz-focus-inner {
 .ui-datepicker td span,
 .ui-datepicker td a {
 	display: block;
-	padding: .2em;
+	padding: 1em;
 	text-align: right;
 	text-decoration: none;
 }
@@ -897,7 +897,7 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget.ui-widget-content {
-	border: 1px solid #c5c5c5;
+	border:0 !Important /*1px solid #c5c5c5*/;
 }
 .ui-widget-content {
 	border: 1px solid #dddddd;
@@ -1001,9 +1001,9 @@ a.ui-button:active,
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
-	border: 1px solid #dad55e;
-	background: #fffa90;
-	color: #777620;
+	border: 1px solid #ab4f27;
+	background: #D8621D;
+	color: #ffffff;
 }
 .ui-state-checked {
 	border: 1px solid #dad55e;
