--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1709,6 +1709,6 @@ ul.oneonone-results li.result-box .tutor-info{
     margin: 2px;
 }
 
-.profilepage-result{
+.profilepage-result .result-box{
 	min-height:150px;
 }
