--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1750,7 +1750,7 @@ ul.exam-prep-results.profilepage-result .result-box{
 }
 
 .calender-info li.available span{
-	background:green;
+	background:#42B373;
 }
 
 .calender-info li.unavailable span{
