--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1313,7 +1313,7 @@ ul.oneonone-results li.result-box{
    margin: 10px 10px 0 0;
    width: 32.3%;
    box-sizing: border-box;
-   min-height: 230px;
+   min-height: 250px;
    position:relative;
 }
 
@@ -1344,16 +1344,13 @@ ul.exam-prep-results li .course-title,
 ul.oneonone-results li .course-title{margin:0 0 1em 0;font-size: 18px; word-wrap: break-word;line-height: 1.5em;}
 
 
-ul.exam-prep-results li. course-title a,
+ul.exam-prep-results li .course-title a,
 ul.oneonone-results li .course-title a{
-	width: 80%;
+    width: 80%;
     display: inline-block;
     margin: 0;
 }
 
-/*.range-slider{
-	padding: 5px;
-}*/
 
 input[type="range"].range-slider__range {
   -webkit-appearance: none;
@@ -1866,3 +1863,9 @@ ul.exam-prep-results.profilepage-result .result-box{
 .msg-container .fep-form-field{
 	margin:0 0 1em 0;
 }
+
+.howitworks-image{
+min-height:87px;
+}
+
+.registerbox-resp{display:none;}
