--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -843,6 +843,11 @@ ul.exam-prep-results li.result-box, ul.oneonone-results li.result-box{
 
 .registration-blog{width: 30% !important;}
 
+.left-slider{height:181px !important;}
+
+.howitworks-image{height:181px !important;}
+
+.related-links-section-ipad{display:block;}
 
 }
 
