--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -168,6 +168,8 @@ ul.oneonone-results li.result-box p.field-para{
 	margin: 0 0 1em 0;
 }
 
+.left-slider{height:220px !important;}
+
 }
 
 /* Portrait */
