--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -212,6 +212,22 @@ ul.oneonone-results li.result-box p.field-para{
 }
 
 .registerbox-resp{display:block !important; padding:0 1em 0 0;}
+
+.left-slider{height:143px !important;}
+
+.ult-content-box{text-align:center;}
+
+.aws-container .aws-search-field{width:100%!important;}
+
+.column-grey-dark{height:620px!important;}
+
+.sf-menu > li{display:inline-block;float: none !important;}
+
+.wh-footer .wh-footer-bottom .sf-menu,
+.social-links{text-align:center !important;}
+
+
+
 }
 
 /* Landscape */
