--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -164,6 +164,7 @@ input[type="range"].range-slider__range{
 ul.exam-prep-results li.result-box, ul.oneonone-results li.result-box{
 	width: 100% !important;
     padding: 1em 0.5em !important;
+	height:auto!important;
 }
 
 ul.exam-prep-results li.result-box p.field-para, 
