--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -151,6 +151,7 @@ video.video-js,
 .filter-box p.field-para input[type="text"],
 .filter-box p.field-para select{
 	margin: 0 0 1em 0;
+	width:100%;
 }
 
 .curriculum-select{
